@@ -18,7 +18,7 @@ public class CurrentDate implements LayoutFormatter {
     @Override
     public String format(String fieldText) {
         String format = CurrentDate.DEFAULT_FORMAT;
-        if ((fieldText != null) && !fieldText.trim().isEmpty()) {
+        if ((fieldText != null) && !fieldText.isBlank()) {
             format = fieldText;
         }
         return ZonedDateTime.now().format(DateTimeFormatter.ofPattern(format));
