@@ -10,6 +10,7 @@ import org.jabref.logic.l10n.Localization;
 import org.jabref.logic.os.OS;
 import org.jabref.logic.util.HeadlessExecutorService;
 import org.jabref.logic.util.NotificationService;
+import org.jabref.logic.util.strings.StringUtil;
 import org.jabref.model.entry.BibEntry;
 
 import org.slf4j.Logger;
@@ -36,15 +37,12 @@ public class PushToEmacs extends AbstractPushToApplication {
         couldNotPush = false;
         couldNotCall = false;
         notDefined = false;
+        commandPath = preferences.getCommandPaths().getOrDefault(this.getDisplayName(), "");
 
-        commandPath = preferences.getCommandPaths().get(this.getDisplayName());
-
-        if ((commandPath == null) || commandPath.trim().isEmpty()) {
+        if (StringUtil.isBlank(commandPath)) {
             notDefined = true;
             return;
         }
-
-        commandPath = preferences.getCommandPaths().get(this.getDisplayName());
 
         String keyString = getKeyString(entries, getDelimiter());
 
@@ -87,7 +85,8 @@ public class PushToEmacs extends AbstractPushToApplication {
                   .addArgument(() -> Arrays.toString(com))
                   .log();
 
-            final Process p = Runtime.getRuntime().exec(com);
+            ProcessBuilder processBuilder = new ProcessBuilder(com);
+            final Process p = processBuilder.start();
 
             HeadlessExecutorService.INSTANCE.executeAndWait(() -> {
                 try (InputStream out = p.getErrorStream()) {
@@ -101,9 +100,17 @@ public class PushToEmacs extends AbstractPushToApplication {
                         LOGGER.warn("Could not read from stderr.", e);
                     }
                     // Error stream has been closed. See if there were any errors:
-                    if (!sb.toString().trim().isEmpty()) {
-                        LOGGER.warn("Push to Emacs error: {}", sb);
+                    String error = sb.toString().trim();
+                    if (!error.isEmpty()) {
+                        LOGGER.warn("Push to Emacs error: {}", error);
                         couldNotPush = true;
+                        if (error.contains("can't find socket") || error.contains("No socket or alternate editor")) {
+                            sendErrorNotification(Localization.lang("Error pushing entries"),
+                                    Localization.lang("Could not connect to Emacs. Make sure the server is running. In Emacs, type %0 to start it.", "M-x server-start"));
+                        } else {
+                            sendErrorNotification(Localization.lang("Error pushing entries"),
+                                    Localization.lang("Could not push to a running emacs daemon."));
+                        }
                     }
                 } catch (IOException e) {
                     LOGGER.warn("Error handling std streams", e);
@@ -112,14 +119,18 @@ public class PushToEmacs extends AbstractPushToApplication {
         } catch (IOException excep) {
             LOGGER.warn("Problem pushing to Emacs.", excep);
             couldNotCall = true;
+            sendErrorNotification(Localization.lang("Error pushing entries"),
+                    Localization.lang("Could not call executable '%0'.", commandPath) + "\n" +
+                            Localization.lang("Please check the path in the preferences.") + "\n" +
+                            (OS.OS_X ? Localization.lang("On macOS, you can use the command-line binary.") : ""));
         }
     }
 
     @Override
     public void onOperationCompleted() {
         if (couldNotPush) {
-            this.sendErrorNotification(Localization.lang("Error pushing entries"),
-                    Localization.lang("Could not push to a running emacs daemon."));
+            // Detailed error notification might have been sent already in pushEntries
+            // But we don't want to swallow the success message if there's no error.
         } else if (couldNotCall) {
             this.sendErrorNotification(Localization.lang("Error pushing entries"),
                     Localization.lang("Could not run the emacs client."));
